--- a/gram/templates/navbar.html
+++ b/gram/templates/navbar.html
@@ -11,9 +11,9 @@
   <body>
     <nav class="navbar navbar-inverse" id="navigation">
       <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="{% url 'index'%}"><img src="instagram-clone/static/img/logo.png" alt="logo" id="logo" width="100"></a>
-          <a class="navbar-brand" href="#" id="instagram">Instagram</a>
+        <div class="navbar-header" id="logo">
+          <a class="navbar-brand" href="{% url 'index'%}"><img src="/static/img/logo.png" alt="logo" width="60"></a>
+          <a class="navbar-brand" href="{% url 'index'%}"><img src="/static/img/grambname.png" alt="logo" width="100"></a>
         </div>
         <!-- Adding a search form -->
         <div class="col-sm-4 col-md-4 navbar-right">
