Add both appstore and playstore links

--- a/gram/templates/registration/registration_form.html
+++ b/gram/templates/registration/registration_form.html
@@ -17,8 +17,7 @@
           <form action="/accounts/register/" method="post">
             {% csrf_token %} {% bootstrap_form form %}
             <div class="form-group">
-              <input type="submit" class="btn btn-primary btn-sm" value="Sign Up">
-              <a href="/accounts/login">Log in</a>
+              <h6 id="signup"><input type="submit" class="btn btn-primary btn-sm" value="Sign Up"></h6>
             </div>
 
             <input type="hidden" name="next" value="{{next}}">
@@ -26,13 +25,24 @@
           </form>
 
         </div>
-
+        <h5 class="text-center">By signing up, you agree to our <strong>Terms</strong> & <strong>Privacy Policy.</strong></h5>
+      </div>
+      <div class="panel panel-default">
+        <h5>Have an account? <a href="/accounts/login">Log in</a> </h5>
       </div>
 
     </div>
     <!-- empty div -->
     <div class="col-md-4"></div>
   </div>
+  <div>
+    <h5 class="text-center">Get the app.</h5>
+    <h5 class="text-center"><a class="links" href="https://itunes.apple.com/app/instagram/id389801252?mt=8"><img src="/static/img/appstore.png" alt="logo" width="100"></a>
+    <a class="links" href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DsignupPage%26utm_medium%3Dbadge"><img src="/static/img/googlreplay.jpeg" alt="logo" width="100"></a></h5>
+  </div>
 </div>
+<footer>
+
+</footer>
 
 {% endblock %}
