--- a/gram/templates/navbar.html
+++ b/gram/templates/navbar.html
@@ -17,12 +17,12 @@
         </div>
         <!-- Adding a search form -->
         <div class="col-sm-4 col-md-4 navbar-right">
-          <form action="#" class="navbar-form">
+          <form action="#" class="navbar-form" id="search">
             <div class="input-group">
               <div class="input-group-btn">
-                <button class="btn btn-default" type="submit">
+                <span class="btn btn-default" type="submit">
                   <i class="glyphicon glyphicon-search"></i>
-                </button>
+                </span>
                 <input type="text" class="form-control" placeholder="Search" name="article">
               </div>
             </div>
@@ -33,7 +33,7 @@
         <div class="navbar-right" id="login">
           {% if user.is_authenticated %}
           <ul>
-            <li class="dropdown">
+            <ul class="dropdown">
               <a href="#" class="dropdown-toggle btn" data-toggle="dropdown" aria-expanded="false">{{user.username}}
                           <span class="caret"></span>
                       </a>
@@ -45,7 +45,7 @@
                   <a href="/logout">Logout</a>
                 </li>
               </ul>
-            </li>
+            </ul>
           </ul>
           {% else %}
           <li>
