--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -27,8 +27,14 @@ body {
 
 #login {
   margin-right: 15px;
+  margin-top: 21px;
 }
 
 #signup {
   width: 319px;
+}
+
+#search {
+  margin-left: -527px;
+  margin-top: 21px;
 }
