--- a/gram/templates/navbar.html
+++ b/gram/templates/navbar.html
@@ -20,10 +20,10 @@
           <form action="#" class="navbar-form" id="search">
             <div class="input-group">
               <div class="input-group-btn">
-                <span class="btn btn-default" type="submit">
+                <h6 class="text-center">
+                <button class="btn btn-default" type="submit">
                   <i class="glyphicon glyphicon-search"></i>
-                </span>
-                <input type="text" class="form-control" placeholder="Search" name="article">
+                </button><input type="text" class="form-control" placeholder="Search" name="article"></h6>
               </div>
             </div>
           </form>
@@ -34,9 +34,11 @@
           {% if user.is_authenticated %}
           <ul>
             <ul class="dropdown">
-              <a href="#" class="dropdown-toggle btn" data-toggle="dropdown" aria-expanded="false">{{user.username}}
+              <h6 class="profile"><a class="dropdown-toggle btn" data-toggle="dropdown" aria-expanded="false" href="{% url 'index'%}">
+                <img src="/static/img/profile.png" alt="logo" width="59" height="59"><span class="caret"></span></h6></a>
+              <!-- <a href="#" class="dropdown-toggle btn" data-toggle="dropdown" aria-expanded="false">{{user.username}}
                           <span class="caret"></span>
-                      </a>
+                      </a> -->
               <ul class="dropdown-menu" role="menu">
                 <li>
                   <a href="/accounts/password/change">Change Password</a>
