--- a/gram/templates/registration/registration_form.html
+++ b/gram/templates/registration/registration_form.html
@@ -1,4 +1,4 @@
-{%extends "registration/base.html"%} {% load bootstrap3 %} {% block content %}
+{%extends "registration/base.html"%} {% load bootstrap3 %} {% block content %} {% load static %}
 <div class="container">
   <div class="row">
     <!-- Empty div -->
@@ -12,7 +12,7 @@
         <div class="panel-heading">
           <h3 class="text-center">Sign Up</h3>
         </div>
-        <div class="panel-body">
+        <div class="panel-body" id="help-block">
 
           <form action="/accounts/register/" method="post">
             {% csrf_token %} {% bootstrap_form form %}
@@ -44,5 +44,5 @@
 <footer>
 
 </footer>
-
-{% endblock %}
+{% block styles %} {% bootstrap_css%}
+<link rel="stylesheet" href="{% static 'css/index.css' %}">{% endblock %} {% endblock %}
