style registration page

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -42,3 +42,9 @@ body {
 .profile {
   margin-top: -22px;
 }
+
+div.help-block {
+  display: none;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  color: #737373;
