add edit link in navbar

--- a/gram/templates/navbar.html
+++ b/gram/templates/navbar.html
@@ -36,12 +36,12 @@
             <ul class="dropdown">
               <!-- <h6 class="profile"><a class="dropdown-toggle btn" data-toggle="dropdown" aria-expanded="false" href="{% url 'index'%}">
                 <img src="/static/img/profile.png" alt="logo" width="59" height="59"><span class="caret"></span></h6></a> -->
-              <a href="#" class="dropdown-toggle btn" data-toggle="dropdown" aria-expanded="false">{{user.username}}
+              <a href="/profiles" class="dropdown-toggle btn" data-toggle="dropdown" aria-expanded="false">{{user.username}}
                           <span class="caret"></span>
                       </a>
               <ul class="dropdown-menu" role="menu">
                 <li>
-                  <a href="/accounts/password/change">Change Password</a>
+                  <a href="/profiles/edit">Edit Profile</a>
                 </li>
                 <li>
                   <a href="/logout">Logout</a>
