--- a/gram/templates/registration/base.html
+++ b/gram/templates/registration/base.html
@@ -1,4 +1,4 @@
-{% load bootstrap3 %} {% load staticfiles %}
+{%extends 'base.html'%}{% load bootstrap3 %} {% load staticfiles %}
 <!DOCTYPE html>
 <html>
 
