--- a/gram/templates/navbar.html
+++ b/gram/templates/navbar.html
@@ -41,6 +41,9 @@
                       </a>
               <ul class="dropdown-menu" role="menu">
                 <li>
+                  <a href="/profiles">Profile</a>
+                </li>
+                <li>
                   <a href="/profiles/edit">Edit Profile</a>
                 </li>
                 <li>
