--- a/gram/templates/profiles/post.html
+++ b/gram/templates/profiles/post.html
@@ -6,13 +6,11 @@
     <div class="col-md-4">
       <h3 class="btn text-center">{{user.username}}</h3>
       <hr>
-      <form method="post">
+      <form action="{% url 'uploadpost'%}" method="post">
         {% csrf_token %} {{ post_form.as_p }}
         <button type="submit" class='btn btn-primary'>Upload Post</button>
       </form>
     </div>
-    <!-- empty div -->
-    <div class="col-md-2"></div>
   </div>
 </div>
 {% endblock %}
