--- a/gram/templates/profiles/profile.html
+++ b/gram/templates/profiles/profile.html
@@ -1,13 +1,19 @@
-{% extends 'profiles/base.html' %}{% load bootstrap3 %} {% load static %} {% block content %} <br>
+ {% extends 'profiles/base.html'%} {% load bootstrap3 %} {% load static %} {% load staticfiles %} {% block content %} <br>
 <div class="container" id="editprofiles">
   <div class="row">
     <div class="col-md-4">
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4"><br>
       <h1 class="btn text-center">{{user.username}} <br>
-      <a href="/profiles/edit">Edit Profile</a></h1>
+      <a href="/profiles/edit">Edit Profile</a></h1>{{post_item.description}}
     </div>
-    <div class="col-md-4">
-    </div>
-  </div>
-  {% endblock %}
+    <p> Picture</p>
+    <div class="col-md-2">
+      <div class="row">
+        {% for post_item in post %}
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+          <img src="{{post_item.image_url}}" class="img-responsive" alt="Image" width="100%">
+        </div>
+        <hr> {% endfor %}
+      </div>
+      {% endblock %}
