--- a/gram/templates/base.html
+++ b/gram/templates/base.html
@@ -10,7 +10,7 @@
     {% else %}
     <title>Instagram</title>
     {% endif %} {% block styles %} {% bootstrap_css%}
-    <link rel="stylesheet" href="{% static 'css/index.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link rel="shortcut icon" type="img/png" href="{% static 'img/instalogo.png' %}" /> {% endblock %}
   </head>
 
