--- a/gram/templates/profiles/profile.html
+++ b/gram/templates/profiles/profile.html
@@ -1,18 +1,37 @@
- {% extends 'profiles/base.html'%} {% load bootstrap3 %} {% load static %} {% load staticfiles %} {% block content %} <br>
+{% extends 'profiles/base.html'%} {% load bootstrap3 %} {% load staticfiles %} {% block content %} <br>
 <div class="container" id="editprofiles">
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-3">
+      <img src="{{profile_pic.url}}" class="img-responsive" alt="Image">
     </div>
-    <div class="col-md-4">
-      <div class="row">
-        {% for post_item in post %}
-        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-          <img src="{{post_item.image_url}}" class="img-responsive" alt="Image" width="100%">
+    <div class="col-md-6"><br>
+      <h2><button class="btn btn-info text-center">{{user.username}}</h2></button> <br>
+      <h3><a href="/profiles/edit">Edit Profile</a></h3>
+      <div class="col-md-3"></div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-1"></div>
+    {% for post_item in post %}
+    <div class="col-md-6" id="image">
+      <div class="well">
+        <h3><a href="/profiles">@{{user.username}}</a></h3>
+        <p>{{post_item.location}}</p>
+        <img src="{{post_item.image.url}}" class="img-responsive" alt="Image">
+        <div class="container" id="like">
+          <p>{{post_item.description}}</p>
+          {% if post.liker|length %}
+          <a href="#" data-toggle="modal" data-target="#{{ post.slug }}_likers_modal">Likes: {{ post.liker|length }}</a> {% include 'profiles/likers.html' %} {% else %}
+          <p>Be the first to like this.</p>
+          {% endif %}
+          <div class="input-group">
+            {% if user in post.liker %}
+            <a href="" class="input-group-addon btn btn-default red"><span class="glyphicon glyphicon-heart" id="comment"></span></a> {% else %}
+            <a href="" class="input-group-addon btn btn-default"><span class="glyphicon glyphicon-heart" id="comment"></span></a> {% endif %}
+            <input type="text" class="form-control" placeholder="Add a comment..." aria-describedby="comment">
+          </div>
         </div>
-        <hr> {% endfor %}
       </div>
-      <div class="col-md-4"><br>
-        <h1 class="btn text-center">{{user.username}} <br>
-      <a href="/profiles/edit">Edit Profile</a></h1>{{post_item.description}}
-      </div>
-      {% endblock %}
+    </div>
+    {% endfor %}
+    <div class="col-md-2"></div> {% endblock %}
