--- a/gram/templates/registration/registration_form.html
+++ b/gram/templates/registration/registration_form.html
@@ -1,4 +1,4 @@
-{%extends "registration/base.html"%} {% load bootstrap3 %} {% block content %} {% load static %}
+{% extends 'registration/base.html'%} {% load bootstrap3 %} {% block content %} {% load static %}
 <div class="container">
   <div class="row">
     <!-- Empty div -->
