--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -52,3 +52,12 @@ div.help-block {
   margin-right: 144px;
   padding-top: 24px;
 }
+
+#image {
+  width: 100%;
+  /*height: 100%;*/
+}
+
+#like {
+  width: 100%
+}
