--- a/gram/templates/navbar.html
+++ b/gram/templates/navbar.html
@@ -41,10 +41,16 @@
                       </a>
               <ul class="dropdown-menu" role="menu">
                 <li>
-                  <a href="/profiles">Profile</a>
+                  <a href="{% url 'uploadpost' user.username %}">Upload Post</a>
                 </li>
                 <li>
-                  <a href="/profiles/edit">Edit Profile</a>
+                  <a href="{% url 'profiles' user.username %}">Profile</a>
+                </li>
+                <li>
+                  <a href="{% url 'editprofile' user.username %}">Edit Profile</a>
+                </li>
+                <li>
+                  <a href="{% url 'update_profilepic' user.username %}">Change Profile Picture</a>
                 </li>
                 <li>
                   <a href="/logout">Logout</a>
