--- a/gram/templates/profiles/edit_profile.html
+++ b/gram/templates/profiles/edit_profile.html
@@ -13,7 +13,7 @@
     <div class="col-md-4">
       <a href="/profiles"><h2 class="btn text-center">{{user.username}}</h2></a>
       <hr>
-      <form method="post">
+      <form action="{% url 'editprofile' user.username%}" method="post" enctype="multipart/form-data">
         {% csrf_token %} {{ user_form.as_p }} {{ profile_form.as_p }}
         <button type="submit" class='btn btn-primary'>Save changes</button>
       </form>
