--- a/gram/templates/homepage.html
+++ b/gram/templates/homepage.html
@@ -1,5 +1,1 @@
-{% extends 'base.html'%} { load bootstrap3 %} {% load static %}{% block content %}
-<div class="container">
-  <p>rghj</p>
-</div>
-{% endblock %}
+{% extends 'base.html'%} { load bootstrap3 %} {% load static %}{% block content %} {% endblock %}
