--- a/gram/templates/registration/registration_form.html
+++ b/gram/templates/registration/registration_form.html
@@ -1,6 +1,6 @@
 {% extends 'registration/base.html'%} {% load bootstrap3 %} {% block content %} {% load static %}
-<div class="container">
-  <div class="row">
+<div class="container" id="homepage"><br>
+  <div class="row"><br>
     <!-- Empty div -->
     <div class="col-md-4"></div>
     <div class="col-md-4">
