--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,6 +3,14 @@ body {
   padding: 0;
 }
 
+#homepage {
+  padding-top: 36px;
+}
+
+#homepagel {
+  padding-top: 85px;
+}
+
 #navigation {
   background-color: #fff;
   border: #fff;
@@ -48,16 +56,20 @@ div.help-block {
 
 #editprofiles {
   background-color: #fff;
-  margin-left: 277px;
-  margin-right: 144px;
+  margin-left: 267px;
+  margin-right: 134px;
   padding-top: 24px;
 }
 
 #image {
   width: 100%;
-  /*height: 100%;*/
+  height: 100%;
 }
 
 #like {
   width: 100%
+}
+
+.well {
+  padding-top: 15px;
 }
