--- a/gram/templates/navbar.html
+++ b/gram/templates/navbar.html
@@ -41,7 +41,7 @@
                       </a>
               <ul class="dropdown-menu" role="menu">
                 <li>
-                  <a href="{% url 'uploadpost' user.username %}">Upload Post</a>
+                  <a href="{% url 'uploadpost'%}">Upload Post</a>
                 </li>
                 <li>
                   <a href="{% url 'profiles' user.username %}">Profile</a>
