--- a/gram/templates/profiles/post.html
+++ b/gram/templates/profiles/post.html
@@ -6,7 +6,7 @@
     <div class="col-md-4">
       <h3 class="btn text-center">{{user.username}}</h3>
       <hr>
-      <form action="{% url 'uploadpost' user.username %}" method="post" enctype="multipart/form-data">
+      <form action="{% url 'uploadpost' %}" method="post" enctype="multipart/form-data">
         {% csrf_token %} {{ post_form.as_p }}
         <button type="submit" class='btn btn-primary'>Upload Post</button>
       </form>
