--- a/gram/templates/profiles/profile.html
+++ b/gram/templates/profiles/profile.html
@@ -12,13 +12,7 @@
   </div>
   <div class="row">
     <div class="col-md-4"></div>
-    {% get_comment_count for post_item in post as comment_count %}
-    <!-- commentlist -->
-    {% for comment in comment_list %}
-    <a name="c{{ comment.id }}"></a>
-    <a href="{% get_comment_permalink comment %}">
-      permalink for comment
-    </a>
+    {% for post_item in post %}
     <div class="col-md-4" id="image">
       <div class="well">
         <h3><a href="/profiles">@{{user.username}}</a></h3>
@@ -32,8 +26,8 @@
           {% endif %}
           <div class="input-group">
             {% if user in post.liker %}
-            <a href="{% url 'posts:unlike' post.slug %}" class="input-group-addon btn btn-default red"><span class="glyphicon glyphicon-heart" id="comment"></span></a> {% else %}
-            <a href="{% url 'posts:like' post.slug %}" class="input-group-addon btn btn-default"><span class="glyphicon glyphicon-heart" id="comment"></span></a> {% endif %}
+            <a href="" class="input-group-addon btn btn-default red"><span class="glyphicon glyphicon-heart" id="comment"></span></a> {% else %}
+            <a href="" class="input-group-addon btn btn-default"><span class="glyphicon glyphicon-heart" id="comment"></span></a> {% endif %}
             <input type="text" class="form-control" placeholder="Add a comment..." aria-describedby="comment">
           </div>
         </div>
