--- a/gram/templates/base.html
+++ b/gram/templates/base.html
@@ -15,9 +15,9 @@
   </head>
 
   <body>
-    {% include "navbar.html" %} {% block content %} {% endblock %} {% block scripts %}
+    {% include "navbar.html" %} {% block content %} {% endblock %} {% block scripts %} {% bootstrap_javascript %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    {% bootstrap_javascript %} {% endblock %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> {% endblock %}
 
   </body>
 
