--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -28,6 +28,10 @@ body {
   padding-left: 450px;
 }
 
+#profile {
+  width: 40px;
+}
+
 #instagram {
   margin-left: 543px;
   margin-top: 23px;
@@ -72,4 +76,12 @@ div.help-block {
 
 .well {
   padding-top: 15px;
+}
+
+.comment {
+  margin: 20px 0px 20px 20px;
+}
+
+#red {
+  width: 5px;
 }
